add about page - add terminal style

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -1,6 +1,7 @@
 {
   "nav": {
     "home": "الرئيسية",
+    "about": "نبذة عني",
     "projects": "المشاريع",
     "experience": "الخبرات",
     "contact": "تواصل"
@@ -121,5 +122,22 @@
       "كل مشروع أنجزه — من Ksar-Data إلى مواقع المطاعم، وأنظمة المدارس، والتجارب المعتمدة على الذكاء الاصطناعي، وتطبيقات Tauri، والأدوات المدنية — هو نتيجة فضول لا يتوقف ورغبة دائمة في التعلم وإتقان التقنيات الجديدة."
     ],
     "closing": "إذا كنت تبحث عن شخص عصامي، سريع، صريح، ومهووس ببناء حلول مفيدة… فأنا يونس، فلنصنع شيئًا ذا معنى."
+  },
+  "about": {
+    "intro": {
+      "title": "مرحبًا، أنا يونس — مطوّر Full-Stack عصامي، ومصمّم، وصانع حلول رقمية تعمل بجدية.",
+      "paragraphs": [
+        "تعلّمت كل شيء بمجهود شخصي — بدأت بدورة CS50 قبل أربع سنوات، ووصلت اليوم إلى بناء منتجات رقمية كاملة باستخدام Django وReact وReact Native وTailwind وDocker وغيرها من أحدث أدوات المطوّرين. لدي 4 سنوات من الخبرة في البرمجة، أمضيت آخر 12 شهرًا منها في “البرمجة بالأسلوب الحديث” باستخدام Claude Code وGPT5-Codex وGemini 2.5 Pro وCursor وVS Code، لأعمل بسرعة أكبر وبجودة أفضل.",
+        "أنا مؤسّس شركة OPICOM Tech، حيث أساعد المدارس والشركات والمجتمعات على تحويل أفكارهم إلى منتجات رقمية حقيقية: مواقع إلكترونية، تطبيقات هاتف، لوحات بيانات، منصّات معلومات، تطبيقات مكتبيّة، وغير ذلك. إذا كان هناك تحدٍّ يحتاج إلى حل — فأنا أبنيه.",
+        "لدي جانب إبداعي أيضًا: أصمّم الشعارات، الإعلانات، التصاميم المرئية، وأعدّ فيديوهات لعملائي (لست محترفًا في التصميم، لكن النتائج ترضي العملاء). أتقن Photoshop وIllustrator، وأحب المزج بين المنطق والإبداع.",
+        "كل مشروع أنجزه — من Ksar-Data إلى مواقع المطاعم، وأنظمة المدارس، وأدوات المجتمع، وتطبيقات Tauri، وتجارب الذكاء الاصطناعي — هو حصيلة فضول دائم ورغبة مستمرة في التعلّم والتطوّر مع التقنيات الجديدة.",
+        "إذا كنت تبحث عن شخص عصامي، سريع، صريح، ومهووس ببناء حلول فعّالة… فأنا يونس، لنصنع شيئًا ذا معنى."
+      ]
+    },
+    "tabs": {
+      "backend": "أنا كمطور خلفية",
+      "frontend": "أنا كمطور واجهات",
+      "designer": "أنا كمصمم"
+    }
   }
 }
