fix me as frontend page v0.1

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -138,6 +138,32 @@
       "backend": "أنا كمطور خلفية",
       "frontend": "أنا كمطور واجهات",
       "designer": "أنا كمصمم"
+    },
+    "frontendWorkbench": {
+      "title": "مجموعة أدوات الواجهات",
+      "description": "أصمّم الواجهات كمكوّنات React قابلة لإعادة التركيب."
+    }
+  },
+  "frontend": {
+    "introTitle": "من الرسم إلى الواجهة",
+    "introText": "كل قسم في هذا الموقع يبدأ برسمة سريعة على الورق، ثم أحولها إلى واجهة متجاوبة ونظيفة تعمل على كل الأجهزة.",
+    "examples": {
+      "hero": {
+        "title": "قسم البطل",
+        "caption": "من تخطيط بسيط إلى بطل حي يحتوي على النص والأزرار والهوية."
+      },
+      "about": {
+        "title": "قسم من أنا",
+        "caption": "تحويل الملاحظات إلى قصة مختصرة تعمل جيدًا على الشاشات الصغيرة والكبيرة."
+      },
+      "projects": {
+        "title": "قسم المشاريع",
+        "caption": "أرسم البطاقات أولًا ثم أبني شبكة المشاريع الحقيقية مع التصفية والتفاعل."
+      },
+      "contact": {
+        "title": "قسم التواصل",
+        "caption": "من مخطط نموذج بسيط إلى تجربة تواصل كاملة مع التحقق والرسائل."
+      }
     }
   }
 }
